--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "ace-builds": "^1.4.14",
+    "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "elm-format": "^0.8.5",
     "react": "^18.0.0",
     "react-ace": "^9.5.0",
     "react-bootstrap": "^2.2.2",
