--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ace-builds": "^1.4.14",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "child_process": "^1.0.2",
+    "cors": "^2.8.5",
     "elm-format": "^0.8.5",
     "react": "^18.0.0",
     "react-ace": "^9.5.0",
@@ -18,7 +20,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "node src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
