--- a/package.json
+++ b/package.json
@@ -3,21 +3,16 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^12.1.4",
-    "@testing-library/user-event": "^13.5.0",
-    "ace-builds": "^1.4.14",
-    "axios": "^0.26.1",
-    "bootstrap": "^5.1.3",
-    "child_process": "^1.0.2",
+    "axios": "^1.2.6",
+    "bootstrap": "^5.2.3",
     "cors": "^2.8.5",
     "elm-format": "^0.8.5",
-    "react": "^18.0.0",
-    "react-ace": "^9.5.0",
-    "react-bootstrap": "^2.2.2",
-    "react-dom": "^18.0.0",
-    "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.4"
+    "react": "^18.2.0",
+    "react-ace": "^10.1.0",
+    "react-bootstrap": "^2.7.0",
+    "react-dom": "^18.2.0",
+    "react-scripts": "^5.0.1",
+    "web-vitals": "^3.1.1"
   },
   "scripts": {
     "start": "node src/server.js",
